update instance table head word

--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -152,7 +152,7 @@
     },
     {
       field: 'triggerTime',
-      title: '触发时间',
+      title: '计划触发时间',
       width: '140',
       formatter: function (value, row, index) {
         return $.common.dateFormat(parseInt(value), 'yyyy-MM-dd HH:mm:ss');
@@ -160,7 +160,7 @@
     },
     {
       field: 'runStartTime',
-      title: '运行开始时间',
+      title: '实际触发时间',
       width: '140'
     },
     {
