--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/tasks.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/tasks.html
@@ -52,7 +52,7 @@
           field: 'executeDuration',
           title: '执行时长(秒)',
           formatter: function (value, row, index) {
-            return value ? parseFloat((value / 1000).toFixed(3)) : "";
+            return value ? parseFloat((value / 1000).toFixed(2)) : "0";
           }
         },
         {
