--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/job.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/job.html
@@ -152,10 +152,11 @@
           field: 'createdBy',
           title: '创建人'
         },
-        /*{
+        {
           field: 'updatedAt',
-          title: '更新时间'
-        },*/
+          title: '更新时间',
+          visible: false
+        },
         {
           field: 'createdAt',
           title: '创建时间'
