--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/index-topnav.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/index-topnav.html
@@ -27,7 +27,7 @@
         </div>
         <a th:href="@{/index}">
             <li class="logo hidden-xs">
-                <img alt="Disjob" src="../static/disjob.png" th:src="@{/disjob.png}" style="width:100px; height:32px;">
+                <img alt="Disjob" src="../static/disjob.png" th:src="@{/disjob.png}" style="width:100px;">
             </li>
          </a>
       <div class="sidebar-collapse tab-content" id="side-menu">
