--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -2,42 +2,20 @@
 <html lang="en" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark"  data-a11y-animated-images="system" data-a11y-link-underlines="false">
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="Access-Control-Allow-Origin" content="*" />
-    <link rel="dns-prefetch" href="https://github.githubassets.com">
-    <link rel="dns-prefetch" href="https://avatars.githubusercontent.com">
-    <link rel="dns-prefetch" href="https://github-cloud.s3.amazonaws.com">
-    <link rel="dns-prefetch" href="https://user-images.githubusercontent.com/">
-    <link rel="preconnect" href="https://github.githubassets.com" crossorigin>
-    <link rel="preconnect" href="https://avatars.githubusercontent.com">
+  <meta charset="utf-8">
+  <meta http-equiv="Access-Control-Allow-Origin" content="*" />
 
-    <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/light-8cafbcbd78f4.css" />
-    <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/dark-31dc14e38457.css" />
-    <link data-color-theme="dark_dimmed" crossorigin="anonymous" media="all" rel="stylesheet" data-href="https://github.githubassets.com/assets/dark_dimmed-71414d661fe2.css" />
-    <link data-color-theme="dark_high_contrast" crossorigin="anonymous" media="all" rel="stylesheet" data-href="https://github.githubassets.com/assets/dark_high_contrast-ba96c7f1d660.css" />
-    <link data-color-theme="dark_colorblind" crossorigin="anonymous" media="all" rel="stylesheet" data-href="https://github.githubassets.com/assets/dark_colorblind-7471c22cdb6a.css" />
-    <link data-color-theme="light_colorblind" crossorigin="anonymous" media="all" rel="stylesheet" data-href="https://github.githubassets.com/assets/light_colorblind-80180bed15ed.css" />
-    <link data-color-theme="light_high_contrast" crossorigin="anonymous" media="all" rel="stylesheet" data-href="https://github.githubassets.com/assets/light_high_contrast-e89b9cdecb75.css" />
-    <link data-color-theme="light_tritanopia" crossorigin="anonymous" media="all" rel="stylesheet" data-href="https://github.githubassets.com/assets/light_tritanopia-77f15e9154df.css" />
-    <link data-color-theme="dark_tritanopia" crossorigin="anonymous" media="all" rel="stylesheet" data-href="https://github.githubassets.com/assets/dark_tritanopia-f598f8dd18ae.css" />
+  <link rel="assets" href="https://github.githubassets.com/">
+  <link rel="dns-prefetch" href="https://github.githubassets.com">
+  <link rel="preconnect" href="https://github.githubassets.com" crossorigin>
 
-    <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-primitives-fb1d51d1ef66.css" />
-    <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-8f43f7721dc7.css" />
-    <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/global-1c4d2d83ff46.css" />
-    <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/github-422d7f955a64.css" />
-    <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/code-21c43201dfae.css" />
-
-    <title>GitHub - ponfee/disjob: Disjob is a distributed job scheduling framework</title>
-
-    <link rel="assets" href="https://github.githubassets.com/">
-    <link rel="search" type="application/opensearchdescription+xml" href="https://github.com/opensearch.xml" title="GitHub">
-    <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
-    <link rel="canonical" href="https://github.com/ponfee/disjob" data-turbo-transient>
-    <link rel="mask-icon" href="https://github.githubassets.com/pinned-octocat.svg" color="#000000">
-    <link rel="alternate icon" class="js-site-favicon" type="image/png" href="https://github.githubassets.com/favicons/favicon.png">
-    <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="https://github.githubassets.com/favicons/favicon.svg">
-    <link rel="manifest" href="https://github.com/manifest.json" crossOrigin="use-credentials">
-
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/light-a09cef873428.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/dark-5d486a4ede8e.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-primitives-6143c8f97ed1.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-047ee6293fcd.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/global-1ef6adcf9af4.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/github-0eb2e2dcb344.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/code-1fecec11b11c.css" />
 
 </head>
 <!--
@@ -49,6 +27,7 @@
 <body class="logged-out env-production page-responsive" style="word-wrap: break-word;">
 
 <div class="clearfix container-xl mt-4 px-md-4 px-lg-5 px-3">
+
 
 
 
@@ -339,7 +318,7 @@
             <li><a href="https://github.com/dromara/disjob/blob/master/disjob-registry/disjob-registry-etcd/src/test/java/cn/ponfee/disjob/registry/etcd/EmbeddedEtcdServerTestcontainers.java">Etcd Server</a>（依赖本地docker环境）</li>
           </ul>
           <h1 tabindex="-1" id="user-content-example" dir="auto"><a class="heading-link" href="#example">Example<svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></a></h1>
-          <p dir="auto">举个简单的例子：统计在<code>(0，1万亿]</code>区间内质数的个数。如果单机单线程CPU去统计的话不知道要到何年马月，这里我们就可以使用<code>Disjob</code>框架提供的分布式并行执行的能力来解决该类问题。</p>
+          <p dir="auto">举个简单的例子：统计在<code>(0，1万亿]</code>区间内质数的个数。如果是单机单线程CPU去统计的话要耗费很长时间，这里我们就可以使用<code>Disjob</code>框架提供的分布式并行执行的能力来解决该类问题。</p>
           <ol dir="auto">
             <li><strong>拆分任务</strong></li>
           </ol>
@@ -347,7 +326,7 @@
           <ol start="2" dir="auto">
             <li><strong>派发任务</strong></li>
           </ol>
-          <p dir="auto">Supervisor把总任务拆分成10个子任务，然后会使用指定的路由算法把子任务派发给这些Worker机器。</p>
+          <p dir="auto">Supervisor使用指定的路由算法把拆分的10个子任务派发给这些Worker机器。</p>
           <ol start="3" dir="auto">
             <li><strong>接收任务</strong></li>
           </ol>
@@ -412,7 +391,7 @@
           <h2 tabindex="-1" id="user-content-contributing" dir="auto"><a class="heading-link" href="#contributing">Contributing<svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></a></h2>
           <p dir="auto">如有发现bug、更优的实现方案、新特性等，可提交PR或新建<a href="/dromara/disjob/issues">Issues</a>。</p>
           <h2 tabindex="-1" id="user-content-communication" dir="auto"><a class="heading-link" href="#communication">Communication<svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></a></h2>
-          <p dir="auto">扫码添加微信好友，备注：disjob，邀您加入群聊</p>
+          <p dir="auto">扫码添加微信好友，备注<code>disjob</code>，邀您加入群聊</p>
           <p dir="auto"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dromara/disjob/blob/master/docs/images/wechat.jpg"><img src="https://raw.githubusercontent.com/dromara/disjob/master/docs/images/wechat.jpg" width="230" alt="Wechat group" style="max-width: 100%;"></a></p>
           <h2 tabindex="-1" id="user-content-todo-list" dir="auto"><a class="heading-link" href="#todo-list">Todo List<svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></a></h2>
           <ul class="contains-task-list">
@@ -430,11 +409,6 @@
     </div>
 
   </readme-toc>
-
-
-
-
-
 
 
 
