wait for pause&cancel instance

--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -318,7 +318,7 @@
             <li><a href="https://github.com/dromara/disjob/blob/master/disjob-registry/disjob-registry-etcd/src/test/java/cn/ponfee/disjob/registry/etcd/EmbeddedEtcdServerTestcontainers.java">Etcd Server</a>（依赖本地docker环境）</li>
           </ul>
           <h1 tabindex="-1" id="user-content-example" dir="auto"><a class="heading-link" href="#example">Example<svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></a></h1>
-          <p dir="auto">举个简单的例子：统计在<code>(0，1万亿]</code>区间内质数的个数。如果是单机单线程CPU去统计的话要耗费很长时间，这里我们就可以使用<code>Disjob</code>框架提供的分布式并行执行的能力来解决该类问题。</p>
+          <p dir="auto">举个简单的例子：统计在<code>(0，1万亿]</code>区间内质数的个数。如果是单机单线程CPU的话要统计很长时间，这里我们就可以使用<code>Disjob</code>框架提供的分布式并行执行的能力来解决该类问题。</p>
           <ol dir="auto">
             <li><strong>拆分任务</strong></li>
           </ol>
