--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -166,6 +166,7 @@
     {
       field: 'runEndTime',
       title: '运行结束时间',
+      width: '140',
       visible: false
     },
     {
@@ -195,16 +196,19 @@
     {
       field: 'rnstanceId',
       title: 'RnstanceId',
+      width: '150',
       visible: false
     },
     {
       field: 'pnstanceId',
       title: 'PnstanceId',
+      width: '150',
       visible: false
     },
     {
       field: 'wnstanceId',
       title: 'WnstanceId',
+      width: '150',
       visible: false
     },
     {
