--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -174,7 +174,10 @@
       title: '运行时长(秒)',
       width: '90',
       formatter: function (value, row, index) {
-        return value ? parseFloat((value / 1000).toFixed(2)) : "0";
+        if (value === 0) {
+          return "0";
+        }
+        return value ? parseFloat((value / 1000).toFixed(2)) : "-";
       }
     },
     {
